@@ -637,6 +637,7 @@ ot_check_test (FunctionalChaos_ishigami_sparse)
 ot_check_test (FunctionalChaos_ishigami_database)
 ot_check_test (FunctionalChaos_nd)
 ot_check_test (KrigingAlgorithm_std)
+ot_check_test (KrigingAlgorithm_funcmodel IGNOREOUT)
 ot_check_test (KrigingRandomVector_std)
 ot_check_test (MetaModelValidation_std)
 ot_check_test (GeneralLinearModelAlgorithm_std)
